@@ -22,7 +22,7 @@
     |Qore::SSH2::SFTPClient|allows Qore programs to use the sftp protocol
     |Qore::SSH2::SSH2Channel|allows Qore programs to send and receive data through an ssh2 channel
 
-    Also included with the binary xml module:
+    Also included with the binary ssh2 module:
     - <a href="../../SftpPoller/html/index.html">SftpPoller user module</a>
 
     When connecting the module will try to:
@@ -104,7 +104,7 @@ stdout.printf("exit status: %d\n", $chan.getExitStatus());@endcode
     @subsection v10 Version 1.0
     - fixed crashing bugs handling errors and handle scope in the @ref Qore::SSH2::SFTPClient "SFTPClient" class
     - added the <a href="../../SftpPoller/html/index.html">SftpPoller</a> user module
-
+    - force socket disconnect in case of a timeout error when trying to close a file descriptor
 
     @subsection v099 Version 0.9.9
     - closed some gaps in the non-blocking I/O solution introduced in the last release
